# Disaster-Detection-VLM

./: .gitignore  JSONParsing.py  RAGDB.py  README.md  build_db.py  chatbot.py
backend/: .env.example  README.md  chatbot.py  check_db.py  cnn_router.py  copy_test_data.py  dataparser.py  db.py  disaster_routes.py  eval_vlm.py  example.env  find_image_paths.py  find_test_cases.py  main.py  mongo.py  parse.py  pdf_ingester.py  pyproject.toml  rag.py  run.py  run_perf_test.py  search.py  seed.py  server.py  storage.py  syncScript.py  test_cnn_only.py  test_pipeline.py  vlm.py
backend/chatbot/: chatbot.py  pdf_ingester.py  rag.py  search.py
backend/cnn/: __init__.py  model.py  predict.py  train.py  vlm_pipeline.py
backend/data/: scene_prompt_overrides.json  vlm_eval_full.csv  vlm_eval_sample.csv
backend/database/: dataparser.py  db.py
backend/disaster_bench/: __init__.py  cli.py
backend/disaster_bench/__pycache__/: cli.cpython-314.pyc.1560638698512
backend/disaster_bench/data/: crops.py  dataset.py  io.py  mae_dataset.py  overlays.py  polygons.py  pred_instances.py  rasterize.py
backend/disaster_bench/eval/: matching.py  metrics.py  report.py
backend/disaster_bench/geometry/: features.py  thresholds.py
backend/disaster_bench/pipelines/: track1.py  track1_deploy.py  track2a.py  track2b.py  track2b_learned.py  track3.py  track4_vlm.py
backend/disaster_bench/training/: losses.py
backend/standalone-scripts/: build_eval_csv.py  eval_ablation.py  populate-db.py  syncScript.py  upload_pdfs_to_s3.py
backend/vlm/: db.py  search.py  vlm.py
(+64 files in other folders)
