[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.97.0",
    "boto3>=1.42.62",
    "chromadb>=0.5.0",
    "fastapi>=0.135.1",
    "matplotlib>=3.10.9",
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "pymongo>=4.16.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.32.5",
    "routes>=2.5.1",
    "shapely>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.26.0",
    "uvicorn[standard]>=0.38.0",
]
